BV-125 Migrate Barcode Validator Project to Gradle!